--- a/content/reference/java_interop.adoc
+++ b/content/reference/java_interop.adoc
@@ -16,10 +16,13 @@ toc::[]
 == Class access
 
 [%hardbreaks]
-**Classname**
-**Classname$NestedClassName**
+**Classname** (imported or fully-qualified)
+**Classname$NestedClassName** (inner classes)
+**Classname\*** (array classes, `*` count indicates dimension)
 
-Symbols representing class names are resolved to the Class instance. Inner or nested classes are separated from their outer class with a `$`. Fully-qualified class names are always valid. If a class is `import`ed in the namespace, it may be used without qualification. All classes in java.lang are automatically imported to every namespace.
+Symbols representing class names are resolved to the Class instance. Inner or nested classes are separated from their outer class with a `$`. Fully-qualified class names are always valid. If a class is imported in the namespace, it may be used without qualification. Array classes end in 1 or more `\*`'s. Array classes may also have primitive components, e.g. `long\*`.
+
+All classes in java.lang are automatically imported to every namespace.
 
 [source,clojure-repl]
 ----
