--- a/content/reference/java_interop.adoc
+++ b/content/reference/java_interop.adoc
@@ -18,7 +18,7 @@ toc::[]
 [%hardbreaks]
 **Classname[$InnerClass](*+)?**
 
-Symbols representing class names are resolved to the Class instance. Inner or nested classes are separated from their outer class with a `$`. Fully-qualified class names are always valid. If a class is import`ed in the namespace, it may be used without qualification. Array classes end in 1 or more `\*`s, one per dimension. Array classes only may also have a primitive component, e.g. `pass:[long*]`.
+Symbols representing class names are resolved to the Class instance. Inner or nested classes are separated from their outer class with a `$`. Fully-qualified class names are always valid. If a class is import`ed in the namespace, it may be used without qualification. Array classes end in 1 or more ``*``s, one per dimension. Array classes only may also have a primitive component, e.g. `pass:[long*]`.
 
 All classes in java.lang are automatically imported to every namespace.
 
