--- a/content/reference/metadata.adoc
+++ b/content/reference/metadata.adoc
@@ -82,9 +82,10 @@ Modify or reset the metadata respectively for a namespace/var/ref/agent/atom.
 In addition to with-meta, there are a number of reader macros (<<reader#macrochars,The Reader: Macro Characters>>) for applying metadata to the expression following it at read-time:
 
 * `^{:doc "How it works!"}` - adds the metadata map to the metadata of the next value read
-* `^:dynamic` - like `^{:dynamic true}`
+* `^:keyword` - adds the metdata `^{:dynamic true}`
 * `^String` - like `^{:tag java.lang.String}`
 * `^"java.lang.String"` - like `^{:tag java.lang.String}`
+* `^[String long _]` - like  `^{:arg-tags [String long _]}`
 
 The `:tag` key is used to hint an objects type to the Clojure compiler. See <<java_interop#typehints,Java Interop: Type Hints>> for more information and a complete list of special type hints.
 
