--- a/content/reference/java_interop.adoc
+++ b/content/reference/java_interop.adoc
@@ -18,7 +18,9 @@ toc::[]
 [%hardbreaks]
 **Classname[$InnerClass][pass:[*]]**
 
-Symbols representing class names are resolved to the Class instance. Inner or nested classes are separated from their outer class with a `$`. Fully-qualified class names are always valid. If a class is import`ed in the namespace, it may be used without qualification. Array classes end in 1 or more pass:[*]'s, one per dimension. Array classes only may also have a primitive component, e.g. `pass:[long*]`.
+Symbols representing class names are resolved to the Class instance. Inner or nested classes are separated from their outer class with a `$`. Fully-qualified class names are always valid. If a class is import`ed in the namespace, it may be used without qualification.
+
+Since 1.12, class symbols may end in one or more pass:[*]s to refer to an array of the class. The number of pass:[*]s indicates the array dimension. Array classes may also use a primitive component, e.g. `pass:[long*]`.
 
 All classes in java.lang are automatically imported to every namespace.
 
@@ -57,7 +59,11 @@ Math/PI
 -> 3.141592653589793
 ----
 
-The preferred idiomatic forms for accessing field or method members are given above. The instance member form works for both fields and methods. The instanceField form is preferred for fields and required if both a field and a 0-argument method of the same name exist. They all expand into calls to the dot operator (described below) at macroexpansion time. The expansions are as follows:
+The preferred idiomatic forms for accessing field or method members are given above. The instance member form works for both fields and methods. The instanceField form is preferred for fields and required if both a field and a 0-argument method of the same name exist.
+
+Since Clojure 1.12, instance method symbols may be qualified with the Class name. 
+
+All idiomatic forms expand into calls to the dot operator (described below) at macroexpansion time. The expansions are as follows:
 
 [source,clojure]
 ----
