--- a/content/reference/java_interop.adoc
+++ b/content/reference/java_interop.adoc
@@ -31,7 +31,7 @@ String
 (.getEnclosingClass java.util.Map$Entry)
 -> java.util.Map
 (.getComponentType String*)
-java.lang.String
+-> java.lang.String
 ----
 
 == Member access
@@ -90,8 +90,6 @@ For the special case of invoking an instance member on a Class instance, the fir
 If the second operand is a symbol and no args are supplied it is taken to be a field access - the name of the field is the name of the symbol, and the value of the expression is the value of the field, _unless_ there is a no argument public method of the same name, in which case it resolves to a call to the method. If the second operand is a symbol starting with _-_, the member-symbol will resolve only as field access (never as a 0-arity method) and should be preferred when that is the intent.
 
 If the second operand is a list, or args are supplied, it is taken to be a method call. The first element of the list must be a simple symbol, and the name of the method is the name of the symbol. The args, if any, are evaluated from left to right, and passed to the matching method, which is called, and its value returned. If the method has a void return type, the value of the expression will be _**nil**_. Note that placing the method name in a list with any args is optional in the canonic form, but can be useful to gather args in macros built upon the form.
-
-Since Clojure 1.12, 
 
 Note that boolean return values will be turned into Booleans, chars will become Characters, and numeric primitives will become Numbers unless they are immediately consumed by a method taking a primitive.
 
