--- a/content/dev/contrib_howto.adoc
+++ b/content/dev/contrib_howto.adoc
@@ -25,7 +25,7 @@ Things you should do if you are a Clojure Contrib committer:
 
 * maintain your library and respond to questions/issues that arise
 * do your work on the master branch, or (if you are working on a significant chunk you want to keep temporarily separate) on a feature-specific branch that you create yourself
-* use the Maven Release option on build.clojure.org to make releases
+* use the GitHub "Release on demand" Action to make releases
 * coordinate with other committers before making changes to their libraries
 * accept contributions from others only if they have <<contributors#,signed the CA>>
 
